# SqueakPoseStudio

./: .gitignore  LICENSE  NOTICE.txt  README.md  dataset_builder.py  keypoints.txt  main.py  pyproject.toml  squeakpose_studio.py  torch_ultralytics_checks.py
analysis_toolset/: analysis_toolkit.ipynb
example_datasets/labels_all/: C61205_trimmed_f001200.txt  C61205_trimmed_f001292.txt  C61205_trimmed_f002880.txt  C61205_trimmed_f008438.txt  C61205_trimmed_f008490.txt  C61205_trimmed_f010251.txt  C61205_trimmed_f013446.txt  C61205_trimmed_f013552.txt  C61205_trimmed_f015990.txt  C61205_trimmed_f017010.txt  C61205_trimmed_f017105.txt  C61206_trimmed_f000192.txt  C61206_trimmed_f009287.txt  C61206_trimmed_f012473.txt  C61206_trimmed_f014592.txt  C61206_trimmed_f014640.txt  C61206_trimmed_f016101.txt  C61206_trimmed_f016358.txt  C61207_trimmed_f000117.txt  C61207_trimmed_f002567.txt  C61207_trimmed_f007224.txt  C61207_trimmed_f008571.txt  C61207_trimmed_f010887.txt  C61207_trimmed_f011332.txt  C61207_trimmed_f015075.txt  C61207_trimmed_f017248.txt  C61210_trimmed_f003468.txt  C61210_trimmed_f004022.txt  C61210_trimmed_f004424.txt  C61210_trimmed_f006028.txt  C61210_trimmed_f007083.txt  C61210_trimmed_f009879.txt  C61212_trimmed_f002922.txt  C61212_trimmed_f003599.txt  C61212_trimmed_f003945.txt  C61212_trimmed_f007817.txt  C61212_trimmed_f010525.txt  C61213_trimmed_f002461.txt  C61213_trimmed_f003481.txt  C61213_trimmed_f016287.txt  (+27 more)
labels_all/: C61205_trimmed_f007185.txt  C61205_trimmed_f011649.txt  C61205_trimmed_f015240.txt  C61205_trimmed_f016011.txt  C61206_trimmed_f005971.txt  C61206_trimmed_f009128.txt  C61206_trimmed_f013659.txt  C61207_trimmed_f003745.txt  C61207_trimmed_f013131.txt  C61210_trimmed_f004949.txt  C61210_trimmed_f005856.txt  C61210_trimmed_f006421.txt  C61210_trimmed_f016665.txt  C61212_trimmed_f001974.txt  C61212_trimmed_f006360.txt  C61212_trimmed_f007039.txt  C61212_trimmed_f008249.txt  C61212_trimmed_f008506.txt  C61213_trimmed_f000315.txt  C61213_trimmed_f000838.txt  C61213_trimmed_f001895.txt  C61213_trimmed_f011550.txt  C61213_trimmed_f015901.txt  C61213_trimmed_f016301.txt  C66189_trimmed_f000344.txt  C66189_trimmed_f001119.txt  C66189_trimmed_f002617.txt  C66189_trimmed_f003237.txt  C66189_trimmed_f012462.txt  C66189_trimmed_f013115.txt  C66189_trimmed_f013505.txt  C66189_trimmed_f017427.txt  C66364_trimmed_f004765.txt  C66364_trimmed_f016646.txt  C66364_trimmed_f017896.txt  C66365_trimmed_f002875.txt  C66365_trimmed_f007147.txt  C66365_trimmed_f016013.txt  C66367_trimmed_f003435.txt  C66367_trimmed_f013891.txt  (+8 more)
runs/detect/train/: args.yaml  results.csv
runs/pose/train/: args.yaml  results.csv
