[project]
name = "SqueakPoseStudio"
version = "0.1.0"
description = "Tools for small-animal pose estimation, tracking, and behavioral analysis. Built for reproducibility, rapid prototyping, and seamless integration into research pipelines."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "David Haggerty", email = "david.haggerty@nih.gov" },
    { name = "Caleb Darden", email = "caleb.darden@nih.gov" },
    { name = "David Lovinger", email = "lovindav@willco.niaaa.nih.gov" },
]

dependencies = [
    "clip",
    "hdbscan>=0.8.41",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "oneeurofilter>=0.2.1",
    "pandas>=2.3.3",
    "pyqt6>=6.10.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.233",
    "umap-learn>=0.5.11",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

clip = { git = "https://github.com/ultralytics/CLIP/"}

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
